--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
           <h2 class="visually-hidden">Content</h2>
           <ul class="content-container">
             <li class="content-item">
+              <svg class="desc-icon" width="64" height="64">
+                <use href="antenna"></use>
+              </svg>
               <h3 class="desc-title">Strategy</h3>
               <p class="desc-text">
                 Our goal is to identify the business problem to walk away with
