--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <h2 class="visually-hidden">Content</h2>
           <ul class="content-container">
             <li class="content-item">
-              <svg class="desc-icon" width="64" height="64">
-                <use href="antenna"></use>
-              </svg>
+              <div class="desc-restangle">
+                <svg class="desc-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="desc-title">Strategy</h3>
               <p class="desc-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +78,11 @@
               </p>
             </li>
             <li class="content-item">
+              <div class="desc-restangle">
+                <svg class="desc-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="desc-title">Punctuality</h3>
               <p class="desc-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +90,11 @@
               </p>
             </li>
             <li class="content-item">
+              <div class="desc-restangle">
+                <svg class="desc-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="desc-title">Diligence</h3>
               <p class="desc-text">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +102,11 @@
               </p>
             </li>
             <li class="content-item">
+              <div class="desc-restangle">
+                <svg class="desc-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="desc-title">Technologies</h3>
               <p class="desc-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -151,6 +168,36 @@
               <div class="team-name">
                 <h3 class="team-title-name">Tom Ford</h3>
                 <p class="team-title-pos">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -163,6 +210,36 @@
               <div class="team-name">
                 <h3 class="team-title-name">Camila Garcia</h3>
                 <p class="team-title-pos">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -170,6 +247,36 @@
               <div class="team-name">
                 <h3 class="team-title-name">Daniel Wilson</h3>
                 <p class="team-title-pos">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -228,14 +335,29 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-web">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-web">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-social-media">
+          <h4>Social media</h4>
+          <ul class="footer-media">
+            <li class="media-item">
+              <a href="" class="media-link">
+                <svg class="media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
