--- a/index.html
+++ b/index.html
@@ -347,12 +347,33 @@
         </div>
 
         <div class="footer-social-media">
-          <h4>Social media</h4>
-          <ul class="footer-media">
+          <h4 class="footer-social">Social media</h4>
+          <ul class="media-list">
             <li class="media-item">
-              <a href="" class="media-link">
-                <svg class="media-icon" width="24" height="24">
+              <a href="" class="icon-link">
+                <svg class="icon-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="" class="icon-link">
+                <svg class="icon-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="" class="icon-link">
+                <svg class="icon-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a href="" class="icon-link">
+                <svg class="icon-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
