--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           >
           <ul class="links">
             <li class="links-item">
-              <a class="akt-link" href="./index.html">Studio</a>
+              <a class="akt-link" href="./index.html"
+                ><span class="links-studio">Studio</span></a
+              >
             </li>
             <li class="links-item">
               <a class="akt-link" href="">Portfolio</a>
