--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
           >
           <ul class="links">
             <li class="links-item">
-              <a class="akt-link" href="./index.html"
-                ><span class="links-studio">Studio</span></a
-              >
+              <a class="links-studio" href="./index.html">Studio</a>
             </li>
             <li class="links-item">
               <a class="akt-link" href="">Portfolio</a>
@@ -291,42 +289,96 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-container">
             <li class="portfolio-item">
-              <img src="./images/img5.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img5.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-par">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img6.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img6.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-par">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img7.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img7.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-par">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img8.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img8.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-par">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img9.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img9.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-par">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/img10.jpg" alt="Image" width="360" />
+              <div class="portfolio-wrap-cover">
+                <img src="./images/img10.jpg" alt="Image" width="360" />
+                <div class="portfolio-card">
+                  <p class="portfolio-card-cover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-par">Marketing</p>
@@ -338,7 +390,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-box">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-logo-web">Studio</span></a
           >
@@ -349,7 +401,7 @@
         </div>
 
         <div class="footer-social-media">
-          <h4 class="footer-social">Social media</h4>
+          <p class="footer-social">Social media</p>
           <ul class="media-list">
             <li class="media-item">
               <a href="" class="icon-link">
