--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
               </a>
             </li>
             <li class="media-item">
-              <a href="" class="icon-link">
+              <a href="" class="media-link">
                 <svg class="icon-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
@@ -419,7 +419,7 @@
             </li>
             <li class="media-item">
               <a href="" class="icon-link">
-                <svg class="icon-icon" width="24" height="24">
+                <svg class="media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
