--- a/index.html
+++ b/index.html
@@ -404,29 +404,29 @@
           <p class="footer-social">Social media</p>
           <ul class="media-list">
             <li class="media-item">
-              <a href="" class="icon-link">
-                <svg class="icon-icon" width="24" height="24">
+              <a href="" class="media-link">
+                <svg class="media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
               <a href="" class="media-link">
-                <svg class="icon-icon" width="24" height="24">
+                <svg class="media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
-              <a href="" class="icon-link">
+              <a href="" class="media-link">
                 <svg class="media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
-              <a href="" class="icon-link">
-                <svg class="icon-icon" width="24" height="24">
+              <a href="" class="media-link">
+                <svg class="media-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
