--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Navigation bar-->
+    <!-- ================== Navigation bar ========================-->
     <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -53,7 +53,7 @@
       </div>
     </header>
     <main>
-      <!--Section 1 Hero image-->
+      <!-- =============== Section 1 Hero image ====================-->
       <section class="image">
         <div class="container">
           <h1 class="image-title">Effective Solutions for Your Business</h1>
@@ -116,7 +116,7 @@
           </ul>
         </div>
       </section>
-      <!--Section 3 Our Team-->
+      <!-- =============== Section 3 Our Team ======================-->
       <section class="team">
         <div class="container team-title-container">
           <h2 class="team-title">Our Team</h2>
@@ -283,7 +283,7 @@
         </div>
       </section>
 
-      <!--Section 4 Our Portfolio-->
+      <!--================ Section 4 Our Portfolio =================-->
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -388,6 +388,8 @@
         </div>
       </section>
     </main>
+
+    <!-- ========== FOOTER============= -->
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-box">
