--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- ================== Navigation bar ========================-->
+    <!-- ========================Navigation bar ====================-->
     <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
