--- a/index.html
+++ b/index.html
@@ -291,13 +291,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img5.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Banking App</h3>
