--- a/index.html
+++ b/index.html
@@ -305,13 +305,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img6.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Cashless Payment</h3>
@@ -321,13 +319,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img7.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -337,13 +333,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img8.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -353,13 +347,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img9.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -369,13 +361,11 @@
             <li class="portfolio-item">
               <div class="portfolio-wrap-cover">
                 <img src="./images/img10.jpg" alt="Image" width="360" />
-                <div class="portfolio-card">
-                  <p class="portfolio-card-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-card-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-nampar">
                 <h3 class="portfolio-name">Online Courses</h3>
